# sheepcord

./: LICENSE  README.md  pyproject.toml
sheepcord/: __init__.py  bot.py  exceptions.py  loader.py  localizations.py  permissions.py  rest.py  snowflake.py
sheepcord/models/: __init__.py  applications.py  attachments.py  channels.py  colors.py  commands.py  components.py  embeds.py  emojis.py  interactions.py  members.py  mentions.py  messages.py  reactions.py  responses.py  roles.py  stickers.py  teams.py  users.py
